# src_platform_updater

./: .gitignore  Cargo.toml  README.md  TODO.md
.git_hooks/: pre-commit
lvm/: Cargo.toml
lvm/src/: lib.rs
src/: config.rs  main.rs  system.rs
test/client/: run.sh  setup_fake_clipos_disk_image.sh
test/client/config/: config.toml
test/client/output/: efiboot  lvs
test/client/remote/: remote.toml
test/keys/: priv  pub
test/server/: README.md  rootCA-key.pem  update.clip-os.org.p12
units/: updater.conf  updater.service  updater.timer
vagrant/: .gitignore  Vagrantfile  provision.sh
webroot/update/v1/clipos/: version
