# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright © 2019 ANSSI. All rights reserved.

[package]
name = "updater"
version = "0.1.0"
authors = ["Timothée Ravier <timothee.ravier@ssi.gouv.fr>"]
edition = "2018"

[dependencies]
lvm = { path = "lvm" }
env_logger = "0.6"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.2"
toml = "0.5"
semver = "0.9"
libmount = "0.1"
minisign = "0.5"
snafu = "0.4"
os-release = "0.1"

[dependencies.reqwest]
version = "0.9"
# Use rustls instead of openssl for reqwest
default-features = false
features = [ "rustls-tls" ]

[workspace]
members = [
  "lvm",
]
