# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright © 2019 ANSSI. All rights reserved.

[package]
name = "lvm"
version = "0.1.0"
authors = ["Timothée Ravier <timothee.ravier@ssi.gouv.fr>"]
edition = "2018"

[lib]
name = "lvm"

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
snafu = "0.4"
